fix(core/select): add host full width class to fix flexbox layout bug
ref #86

re #86

--- a/packages/core/src/select/_select-styles.scss
+++ b/packages/core/src/select/_select-styles.scss
@@ -12,6 +12,10 @@ $tags-gap: 4px !default;
 
 .#{$prefix} {
   position: relative;
+
+  &--full-width {
+    width: 100%;
+  }
 }
 
 .#{$tree-select-prefix} {
